css/style.css
html {
	height: 100%;
}

body {
	background-image: url(../img/background.png);
	margin: 0; 
	padding: 0; 
	height: 100%;
}

h1 {
	line-height: 1.5;
}
h1 font {
	color: DodgerBlue;
}

.container {
	background-image: url("../img/foreground.png");
	font-size: 30px;
	font-weight: bold;
	font-family: 'Amatic SC', cursive;	
	color: black;
}

.content {
	background: url(../img/main.png) no-repeat center center ; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	font-family: 'Pacifico', cursive;
	color: white;
	height: 100%; 
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.options {
	margin: 30px auto;
	min-height: 150px;
}

.right { 
	float: right;
}

.left { 
	float: left;
}

.option1, .option2  {
	width: 280px;
	height: 60px;
	background-color: DodgerBlue;
	border-radius: 15px;
	-webkit-box-shadow: 0px 0px 25px 2px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 25px 2px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 25px 2px rgba(0,0,0,0.75);
	text-align: center;
	font-size: 40px; 
	line-height: 60px;
	font-family: 'Amatic SC', cursive;
	font-weight: bold;
	display: inline-block;
}
.option1 a, .option2 a {
	color: white;
	text-decoration: none;
	display: block;
}
.option1:hover, .option2:hover {
    opacity: 0.9;
}

